--- a/style.css
+++ b/style.css
@@ -277,9 +277,15 @@ h1, p{
 
     h1 {
         font-size: 50px;
+        position: relative;
+        top: 60px;
     }
 
     .content-container p {
         padding-left: 0;
+    }
+    
+    .container button {
+        margin: 0;
     }
 }
