--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ h1, p{
         margin-top: 0;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content:space-around;
     }
 
     h1, p{
@@ -284,7 +284,7 @@ h1, p{
     .content-container p {
         padding-left: 0;
     }
-    
+
     .container button {
         margin: 0;
     }
